--- a/git.org
+++ b/git.org
@@ -40,12 +40,17 @@ excludesfile = ~/.gitignore
 [alias]
 #+END_SRC
 
-Alias for graphical log:
+Alias for graphical =log=:
 #+BEGIN_SRC conf
 grog = log --graph --abbrev-commit --decorate --all \
     --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(dim white \
         ) - %an%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow \
         )%d%C(reset)%n %C(white)%s%C(reset)'
+#+END_SRC
+
+Alias for =difftool=:
+#+BEGIN_SRC conf
+df = difftool
 #+END_SRC
 
 ** Diff
