--- a/editorconfig.org
+++ b/editorconfig.org
@@ -3,6 +3,7 @@
 #+PROPERTY: header-args+ :comments no
 #+PROPERTY: header-args+ :mkdirp yes
 #+PROPERTY: header-args+ :tangle "~/.editorconfig"
+#+OPTIONS: prop:t
 
 =root=: special property that should be specified at the top of the file outside
 of any sections. Set to =true= to stop .editorconfig files search on current
