--- a/vim.org
+++ b/vim.org
@@ -43,6 +43,15 @@ let g:filetype_pl="prolog"
 - Grammarous (grammar checker)^{[[https://github.com/rhysd/vim-grammarous][🔗]]}
 - numbertoggle (toggles between hybrid and absolute line numbers))^{[[https://github.com/jeffkreeftmeijer/vim-numbertoggle][🔗]]}
 
+Install =vim-plug= if not already installed.
+#+BEGIN_SRC conf
+if empty(glob('~/.vim/autoload/plug.vim'))
+  silent !curl -fLo ~/.vim/autoload/plug.vim --create-dirs
+    \ https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+  autocmd VimEnter * PlugInstall --sync | source $MYVIMRC
+endif
+#+END_SRC
+
 Download plugins with vim-plug:
 #+BEGIN_SRC conf
 call plug#begin('~/.vim/plugged')
