--- a/sway.org
+++ b/sway.org
@@ -46,10 +46,10 @@ your displays after another 300 seconds, and turn your screens back on when
 resumed. It will also lock your screen before your computer goes to sleep.
 #+BEGIN_SRC conf
 exec swayidle -w \
-       timeout 300 'swaylock -f' \
+       timeout 300 'sh ~/.config/swaylock/lock.sh' \
        timeout 600 'swaymsg "output * dpms off"' \
             resume 'swaymsg "output * dpms on"' \
-       before-sleep 'swaylock -f'
+       before-sleep 'sh ~/.config/swaylock/lock.sh'
 #+END_SRC
 
 * Key bindings
@@ -129,7 +129,7 @@ bindsym $mod+Shift+r exec swaynag -t warning -m 'Reboot?' -b 'Yes' 'shutdown -r 
 
 lock screen
 #+BEGIN_SRC conf
-bindsym $mod+Shift+s exec swaylock
+bindsym $mod+Shift+s exec sh ~/.config/swaylock/lock.sh
 #+END_SRC
 
 ** Moving around
