Make theme more uniform

--- a/firefox.org
+++ b/firefox.org
@@ -49,6 +49,7 @@ user_pref("accessibility.browsewithcaret", true);
 #+END_SRC
 
 * Tridactyl
+** General
 :PROPERTIES:
 :header-args: :tangle ~/.config/tridactyl/tridactylrc :comments both :mkdirp yes :noweb tangle
 :END:
@@ -71,6 +72,164 @@ quickmark m https://mail.google.com
 quickmark f https://facebook.com
 #+END_SRC
 
+Load theme.
+#+BEGIN_SRC conf
+colorscheme theme
+#+END_SRC
+
+** Theme
+:PROPERTIES:
+:header-args: :tangle ~/.config/tridactyl/themes/theme.css :comments both :mkdirp yes :noweb tangle
+:END:
+#+BEGIN_SRC css
+:root {    /* Default-dark by Chris Kempson (http://chriskempson.com) */
+    --base00: <<base00>>;
+    --base01: <<base01>>;
+    --base02: <<base02>>;
+    --base03: <<base03>>;
+    --base04: <<base04>>;
+    --base05: <<base05>>;
+    --base06: <<base06>>;
+    --base07: <<base07>>;
+    --base08: <<base08>>;
+    --base09: <<base09>>;
+    --base0A: <<base0A>>;
+    --base0B: <<base0B>>;
+    --base0C: <<base0C>>;
+    --base0D: <<base0D>>;
+    --base0E: <<base0E>>;
+    --base0F: <<base0F>>;
+
+    --tridactyl-fg: var(--base05);
+    --tridactyl-bg: var(--base00);
+    --tridactyl-url-fg: var(--base08);
+    --tridactyl-url-bg: var(--base00);
+    --tridactyl-highlight-box-bg: var(--base0B);
+    --tridactyl-highlight-box-fg: var(--base00);
+
+    /* Hint character tags */
+    --tridactyl-hintspan-fg: var(--base00) !important;
+    --tridactyl-hintspan-bg: var(--base0A) !important;
+
+    /* Element Highlights */
+    --tridactyl-hint-active-fg: none;
+    --tridactyl-hint-active-bg: none;
+    --tridactyl-hint-active-outline: none;
+    --tridactyl-hint-bg: none;
+    --tridactyl-hint-outline: none;
+}
+
+#command-line-holder {    order: 1;
+    border: 2px solid var(--base0B);
+    color: var(--tridactyl-bg);
+}
+
+#tridactyl-input {    padding: 1rem;
+    color: var(--tridactyl-fg);
+    width: 90%;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    background: var(--tridactyl-bg);
+    padding-left: unset;
+    padding: 1rem;
+}
+
+#completions table {    font-size: 0.8rem;
+    font-weight: 200;
+    border-spacing: 0;
+    table-layout: fixed;
+    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+#completions > div {    max-height: calc(20 * var(--option-height));
+    min-height: calc(10 * var(--option-height));
+}
+
+/* COMPLETIONS */
+
+#completions {    --option-height: 1.4em;
+    color: var(--tridactyl-fg);
+    background: var(--tridactyl-bg);
+    display: inline-block;
+    font-size: unset;
+    font-weight: 200;
+    overflow: hidden;
+    width: 100%;
+    border-top: unset;
+    order: 2;
+}
+
+/* Olie doesn't know how CSS inheritance works */
+#completions .HistoryCompletionSource {    max-height: unset;
+    min-height: unset;
+}
+
+#completions .HistoryCompletionSource table {    width: 100%;
+    font-size: 9pt;
+    border-spacing: 0;
+    table-layout: fixed;
+}
+
+/* redundancy 2: redundancy 2: more redundancy */
+#completions .BmarkCompletionSource {    max-height: unset;
+    min-height: unset;
+}
+
+#completions table tr td.prefix,#completions table tr td.privatewindow,#completions table tr td.container,#completions table tr td.icon {    display: none;
+}
+
+#completions .BufferCompletionSource table {    width: unset;
+    font-size: unset;
+    border-spacing: unset;
+    table-layout: unset;
+}
+
+#completions table tr .title {    width: 50%;
+}
+
+#completions table tr {    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#completions .sectionHeader {    background: unset;
+    font-weight: 200;
+    border-bottom: unset;
+    padding: 1rem !important;
+    padding-left: unset;
+    padding-bottom: 0.2rem;
+}
+
+#cmdline_iframe {    position: fixed !important;
+    bottom: unset;
+    top: 25% !important;
+    left: 10% !important;
+    z-index: 2147483647 !important;
+    width: 80% !important;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 20px !important;
+}
+
+.TridactylStatusIndicator {    position: fixed !important;
+    bottom: 0 !important;
+    background: var(--tridactyl-bg) !important;
+    border: unset !important;
+    border: 1px var(--base0B) solid !important;
+    font-size: 12pt !important;
+    /*font-weight: 200 !important;*/
+    padding: 0.8ex !important;
+}
+
+#completions .focused {    background: var(--base0B);
+    color: var(--base00);
+}
+
+#completions .focused .url {    background: var(--base0B);
+    color: var(--base00);
+}
+#+END_SRC
+
 * Styles
 :PROPERTIES:
 :header-args: :tangle ~/.mozilla/firefox/default/chrome/userChrome.css :comments both :mkdirp yes :noweb tangle
@@ -78,18 +237,12 @@ quickmark f https://facebook.com
 Declaring color variables
 #+BEGIN_SRC css
 :root {
-    --main-color: <<color1>>;
-    --text-color: #ffffff;
-
-    --shade1:#b3efff;
-    --shade2:#80e5ff;
-    --shade3:#4ddbff;
-    --shade4:#1ad0ff;
-    --shade5:#00b7e6;
-    --shade6:#008eb3;
-    --shade7:#006680;
-    --shade8:#003d4d;
-    --shade9:#00141a;
+    --bar-color: <<base01>>;
+    --bar-text-color: <<base06>>;
+    --tab-color: <<base02>>;
+    --tab-text-color: <<base05>>;
+    --tab-selected-color: <<base0D>>;
+    --tab-selected-text-color: <<base00>>;
 }
 #+END_SRC
 
@@ -149,7 +302,7 @@ no round edges
   border: none !important;
   box-shadow: none !important;
   --toolbarbutton-border-radius: 0px !important;
-  color: var(--text-color) !important;
+  color: var(--bar-text-color) !important;
   text-align: center !important;
 }
 #+END_SRC
@@ -166,14 +319,14 @@ center tab text title
 .tab-label {
 	-moz-box-flex: 1 !important;
 	text-align: center !important;
-    color : var(--text-color);
+    color : var(--tab-selected-text-color);
 }
 #+END_SRC
 
 here is a serie of color background
 #+BEGIN_SRC css
 .tab-line{
-	/*background-color: var(--main-color) !important;
+	/*background-color: var(--bar-color) !important;
 	height: 1px !important;*/
     visibility: collapse !important;
 }
@@ -181,16 +334,20 @@ here is a serie of color background
 .tab-background {
 	border: none !important;
     background-attachment: none!important;
-    background-color: var(--main-color) !important;
+    background-color: var(--tab-selected-color) !important;
     background-image: none!important;
 }
 
 .tabbrowser-tab:not([selected]) .tab-background {
 	border: none !important;
-    background-color: var(--shade8) !important;
+    background-color: var(--tab-color) !important;
 }
+.tabbrowser-tab:not([selected]) .tab-label {
+    color : var(--tab-text-color);
+}
+
 #nav-bar,#urlbar-container,#urlbar,#PanelUI-menu-button{
-    background-color: var(--main-color) !important;
+    background-color: var(--bar-color) !important;
 }
 #+END_SRC
 
